--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,41 @@
 <resources>
+    <!-- App Name -->
     <string name="app_name">StudyNow</string>
+
+    <!-- Common -->
+    <string name="app_tagline">Learn Smart, Achieve More!</string>
+    <string name="btn_submit">Submit</string>
+    <string name="btn_login">Login</string>
+    <string name="btn_register">Register</string>
+    <string name="btn_create_account">Create Account</string>
+
+    <!-- Login Screen -->
+    <string name="login_title">Welcome Back</string>
+    <string name="login_username">Username</string>
+    <string name="login_password">Password</string>
+    <string name="login_no_account">Do not have an account? Create one</string>
+
+    <!-- Register Screen -->
+    <string name="register_title">Create Your Account</string>
+    <string name="register_fullname">Full Name</string>
+    <string name="register_email">Email</string>
+    <string name="register_education">Current Education</string>
+    <string name="register_year">Year of Study</string>
+    <string name="register_username">Set Username</string>
+    <string name="register_password">Set Password</string>
+
+    <!-- Spinner arrays -->
+    <string-array name="education_options">
+        <item>High School</item>
+        <item>College</item>
+        <item>University</item>
+        <item>Other</item>
+    </string-array>
+
+    <string-array name="year_options">
+        <item>1st Year</item>
+        <item>2nd Year</item>
+        <item>3rd Year</item>
+        <item>4th Year</item>
+    </string-array>
 </resources>
